--- a/assets/style.css
+++ b/assets/style.css
@@ -30,41 +30,45 @@ h1 {
     display: inline-block;
 }
 
-
-
-html, body, .wrapper {
-    height: 100%;
-    margin: 0;
-    padding: 0;
+.answers label {
+    display: block;
+    margin-bottom: 10px;
 }
 
-
-
-.wrapper {
-    padding-top: 30px;
-    padding-left: 20px;
-    padding-right: 20px;
+button {
+    font-family: 'Work Sans', sans-serif;
+    font-size: 21px;
+    background-color: grey;
+    color: white;
+    border: 0px;
+    border-radius: 3px;
+    padding: 17px;
+    cursor: pointer;
+    margin-bottom: 20px;
 }
 
-header {
-    text-align: center;
-    padding: 20px;
-    padding-top: 0px;
-    color:rgb(35, 121, 197)
+button:hover {
+    background-color: yellow;
 }
 
-h2 {
-    text-align: center;
+.slide {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 0px;
+    z-index: 1;
+    opacity: 0;
+    transition: opacity 0.5s;
 }
 
-.card {
-    background-color: burlywood;
-    border-radius: 5px;
-    border-width: 1px;
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
-    color: black;
-    font-size: 18px;
-    margin: 0 auto;
-    max-width: 800px;
-    padding: 30px 40px;
+.active-slide {
+    opacity: 1;
+    z-index: 2;
 }
+
+.quiz-container {
+    position: relative;
+    height: 200px;
+    margin-top: 40px;
+}
+
