--- a/assets/style.css
+++ b/assets/style.css
@@ -1,74 +1,65 @@
-@import
-url(https://fonts.googleapis.com/css?family=Work+Sans:300,600);
-
-body {
-    font-size: 20px;
-    font-family:'Work Sans', sans-serif;
-    color: black;
-    font-weight: 300;
+body{
+	font-size: 20px;
+	font-family: 'Work Sans', sans-serif;
+	color: #333;
+    font-weight: 200;
     text-align: center;
-    background-color: burlywood;
+    background-color: #f8f6f0;
+    font-family: 'Skranji', cursive;
+    background-color: tan;
 }
-
-h1 {
-    font-weight: 300;
-    margin: 0px;
-    padding: 10px;
-    font-size: 20px;
-    background-color: black;
-    color: #fff;
+h1{
+  font-weight: 300;
+  margin: 0px;
+  padding: 20px;
+  font-size: 40px;
+  background-color: #444;
+  color: #fff;
 }
-
-.question {
-    font-size: 30px;
-    margin-bottom: 10px;
+.question{
+  font-size: 30px;
+  margin-bottom: 10px;
 }
 
 .answers {
-    margin-bottom: 20px;
-    text-align: left;
-    display: inline-block;
+  margin-bottom: 20px;
+  text-align: left;
+  display: inline-block;
+}
+.answers label{
+  display: block;
+  margin-bottom: 10px;
+}
+button{
+  font-family: 'Work Sans', sans-serif;
+	font-size: 22px;
+	background-color: rgb(15, 161, 15);
+	color: #fff;
+	border: 0px;
+	border-radius: 3px;
+	padding: 25px;
+	cursor: pointer;
+	margin-bottom: 20px;
+}
+button:hover{
+	background-color:rgb(196, 50, 50);
 }
 
-.answers label {
-    display: block;
-    margin-bottom: 10px;
+.slide{
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  z-index: 1;
+  opacity: 0;
+  transition: opacity 0.5s;
 }
-
-button {
-    font-family: 'Work Sans', sans-serif;
-    font-size: 21px;
-    background-color: grey;
-    color: white;
-    border: 0px;
-    border-radius: 3px;
-    padding: 17px;
-    cursor: pointer;
-    margin-bottom: 20px;
+.active-slide{
+  opacity: 1;
+  z-index: 2;
 }
-
-button:hover {
-    background-color: yellow;
+.quiz-container{
+  position: relative;
+  height: 200px;
+  margin-top: 40px;
 }
-
-.slide {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 0px;
-    z-index: 1;
-    opacity: 0;
-    transition: opacity 0.5s;
-}
-
-.active-slide {
-    opacity: 1;
-    z-index: 2;
-}
-
-.quiz-container {
-    position: relative;
-    height: 200px;
-    margin-top: 40px;
-}
-
