--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,9 @@ body{
     background-color: #f8f6f0;
     font-family: 'Skranji', cursive;
     background-color: tan;
+    min-height: 100vh;
 }
+
 h1{
   font-weight: 300;
   margin: 0px;
@@ -16,6 +18,7 @@ h1{
   background-color: #444;
   color: #fff;
 }
+
 .question{
   font-size: 30px;
   margin-bottom: 10px;
@@ -26,10 +29,12 @@ h1{
   text-align: left;
   display: inline-block;
 }
+
 .answers label{
   display: block;
   margin-bottom: 10px;
 }
+
 button{
   font-family: 'Work Sans', sans-serif;
 	font-size: 22px;
@@ -40,6 +45,7 @@ button{
 	padding: 25px;
 	cursor: pointer;
 	margin-bottom: 20px;
+    margin-top: 30px;
 }
 button:hover{
 	background-color:rgb(196, 50, 50);
@@ -62,4 +68,14 @@ button:hover{
   position: relative;
   height: 200px;
   margin-top: 40px;
+}
+
+.footer {
+    position: sticky;
+    top: 100%;
+    padding: 30px;
+    border-style: solid;
+    border-color: #444;
+    background-color: #444;
+    font-weight: 100;
 }
