--- a/assets/style.css
+++ b/assets/style.css
@@ -2,12 +2,12 @@ body{
 	font-size: 20px;
 	font-family: 'Work Sans', sans-serif;
 	color: #333;
-    font-weight: 200;
-    text-align: center;
-    background-color: #f8f6f0;
-    font-family: 'Skranji', cursive;
-    background-color: tan;
-    min-height: 100vh;
+  font-weight: 200;
+  text-align: center;
+  background-color: #f8f6f0;
+  font-family: 'Skranji', cursive;
+  background-color: tan;
+  min-height: 100vh;
 }
 
 h1{
@@ -68,6 +68,14 @@ button:hover{
   position: relative;
   height: 200px;
   margin-top: 40px;
+}
+
+.card-timer {
+  border: solid;
+  border-style: solid;
+  padding: 30px;
+  border-color: #444;
+  background-color: #444;
 }
 
 .footer {
